--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="hero">
-        <h1>Hello World</h1>
+        <h1 style="color: black;">Hello World</h1>
     </div>
 </body>
 
